Some work on re-implementing vanilla biome provider.